# MoneySmarts

./: .gitignore  .pylintrc  Makefile  README.md  conf.py  create_home_pixel_art.py  create_project_zip.py  create_vehicle_pixel_art.py  debug_imports.py  export_to_rpgmaker.py  index.rst  ldtk_minimal_test.ldtk  main.py  mass_ldtk_loader.py  pyproject.toml  pytest.ini  run_tilemap_demo.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: README.md
docs/: building_images.md  tasks.md
docs/source/: conf.py  index.rst
moneySmarts/: __init__.py  asset_manager.py  config_manager.py  constants.py  event_manager.py  exceptions.py  game.py  image_manager.py  images.py  models.py  quest.py  sound_manager.py  tilemap.py  ui.py  utils.py  world_assets.py
moneySmarts/screens/: __init__.py  bank_screen.py  base_screens.py  financial_screens.py  game_over_screen.py  game_screen.py  home_purchase_screen.py  inventory_screen.py  life_event_screens.py  overworld_screen.py  random_event_screens.py  shop_screen.py  vehicle_purchase_screen.py
moneySmartz/: __init__.py  constants.py  game.py  image_manager.py  sound_manager.py  ui.py
moneySmartz/screens/: base_screens.py  financial_screens.py  game_screen.py  home_purchase_screen.py  life_event_screens.py  shop_screen.py  vehicle_purchase_screen.py
scripts/: auto_start_env.bat  auto_start_env.ps1  diag_env.py  setup_env.bat  setup_env.ps1
src/main/java/moneysmarts/: BankAccount.java  Card.java  (+9 more)
tests/: test_financial.py  test_models.py  test_ui.py
tileset_layouts/: tileset_layout_manager.py
